tests/ui/enum/enum-and-module-in-same-scope.stderr
error[E0428]: the name `Foo` is defined multiple times
  --> $DIR/enum-and-module-in-same-scope.rs:5:1
   |
LL | enum Foo {
   | -------- previous definition of the type `Foo` here
...
LL | mod Foo {
   | ^^^^^^^ `Foo` redefined here
   |
   = note: `Foo` must be defined only once in the type namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
